--- a/api/templates/output.html
+++ b/api/templates/output.html
@@ -5,7 +5,13 @@
     <title>Results</title>
 </head>
 <body>
-
-{{ data }}
+<center><h1>Data From Amazon</h1></center>
+{{html|safe}}
+<br>
+<br>
+<br>
+<center><h1>Data On The Basis of Product Popularity</h1></center>
+{{sorted|safe}}
+</table>
 </body>
 </html>
