--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -36,15 +36,15 @@
 
 /*------------------------------------------------------------------
     IMPORT FILES
--------------------------------------------------------------------
+-------------------------------------------------------------------*/
 
-@import url(css/animate.css); 
-@import url(css/flaticon.css);
-@import url(css/icomoon.css);
-@import url(css/prettyPhoto.css);
-@import url(css/owl.carousel.css);
-@import url(css/font-awesome.min.css);*/
 
+@import url(animate.css);
+@import url(flaticon.css);
+@import url(icomoon.css);
+@import url(prettyPhoto.css);
+@import url(owl.carousel.css);
+@import url(font-awesome.min.css);
 /*------------------------------------------------------------------
     SKELETON
 -------------------------------------------------------------------*/
@@ -52,7 +52,7 @@
 body {
     color: #999;
     font-size: 15px;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Raceway', sans-serif;
     line-height: 1.80857;
 }
 
