--- a/api/templates/Input.html
+++ b/api/templates/Input.html
@@ -61,12 +61,15 @@
 					 <div class="banner-text">
 
 							<div align="center">
-
+<center>
   <form action="" method="post">
      {% csrf_token %}
     {{ inputForm|crispy }}
       <input type="submit" value="submit">
     </form>
+
+	</center>
+
 	</div>
 
 
