--- a/api/static/css/style.css
+++ b/api/static/css/style.css
@@ -1,4 +1,4 @@
-{% load static %}
+
 
 /*------------------------------------------------------------------
     Version: 1.0
@@ -509,7 +509,7 @@ li.social-links a {
 -------------------------------------------------------------------*/
 
 .slider-bg-one {
-    background-image: url("{% static 'uploads/slider_01.jpg' %}");
+    background-image: url("uploads/slider_01.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -1440,7 +1440,7 @@ hr.invis1 {
     width: 100%;
     height: 100%;
     position: relative;
-    background: url("{% static 'uploads/code.jpg' %}") no-repeat;
+    background: url("uploads/code.jpg") no-repeat;
 }
 
 .design-wrapper {
@@ -1461,7 +1461,7 @@ hr.invis1 {
     position: relative;
     -webkit-transform: translateX(-50%);
     transform: translateX(-50%);
-    background: url("{% static 'uploads/design.jpg' %}") no-repeat;
+    background: url("uploads/design.jpg") no-repeat;
 }
 
 
